<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkTech">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/important"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/text_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_msg"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_margin="10dp">
            <Button
                android:id="@+id/bnt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_primary"
                android:text="@string/download"
                android:textColor="@color/white"
                android:layout_marginEnd="15dp"/>
            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_rounded_secondary"
                android:textColor="@color/white"
                android:text="Cancel"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>