<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkTech">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/login_icon"/>


            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bienvenido"
                android:textColor="@color/white"
                android:textSize="40dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Inicia sesión o crea una cuenta para continuar"
                android:textColor="@color/white"
                android:textSize="20dp"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                app:cardBackgroundColor="#40000000"
                android:layout_marginTop="15dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="25dp"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/app_name"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_email" />


                        <EditText
                            android:id="@+id/editText_email_login_activity"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginEnd="10dp"
                            android:layout_marginStart="10dp"
                            android:background="#00000000"
                            android:focusable="true"
                            android:hint="@string/email_login"
                            android:inputType="textEmailAddress"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/gray"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <include
                        layout="@layout/login_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:contentDescription="@string/app_name"
                            android:paddingBottom="12dp"
                            android:paddingTop="8dp"
                            android:src="@drawable/ic_password" />

                        <EditText
                            android:id="@+id/editText_password_login_activity"
                            android:layout_width="246dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:background="#00000000"
                            android:hint="@string/password_login"
                            android:inputType="textPassword"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textColorHint="@color/gray"
                            android:textCursorDrawable="@drawable/cursor"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <include
                        layout="@layout/login_line"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/checkbox_login_activity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:checked="true"/>

                        <TextView
                            android:id="@+id/text_reme_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginStart="10dp"
                            android:text="@string/remember_me"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:weightSum="2">

                <Button
                    android:id="@+id/button_login_activity"
                    android:layout_marginTop="9dp"
                    style="?android:attr/buttonBarButtonStyle"
                    fontPath="fonts/customSemiBold.otf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded_primary"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix" />
                <Button
                    android:id="@+id/button_sing_up_login"
                    android:layout_marginTop="9dp"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_rounded_pcolor"
                    android:text="@string/register"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="MissingPrefix"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >
                <View
                    android:layout_width="50dp"
                    android:layout_height="3dp"
                    android:background="@color/blue_fb" />

                <View
                    android:layout_width="50dp"
                    android:layout_height="3dp"
                    android:background="@color/yellow" />
            </LinearLayout>

            <Button
                android:id="@+id/btnGoogleSign"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/iniciar_con_google"
                android:visibility="gone"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:background="@drawable/btn_google_signin_dark_normal"/>

            <Button
                android:visibility="gone"
                android:id="@+id/button_forget_password_login"
                style="?android:attr/buttonBarButtonStyle"
                fontPath="fonts/customSemiBold.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/yellow"
                tools:ignore="MissingPrefix" />

            </LinearLayout>

    </ScrollView>

</RelativeLayout>